<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/textBookListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_list_title"
        style="@style/textH1"/>

    <Button
        android:id="@+id/btnAddCollection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_collection"/>

    <Button
        android:id="@+id/btnDisplayAllBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_display_all_book"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerBook"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnIsbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="end|bottom"
            app:srcCompat="@drawable/ic_baseline_add"
            android:focusable="true"
            app:tint="@color/backgroundWhite"
            app:backgroundTint="@color/primaryBlue"
            tools:ignore="VectorDrawableCompat"
            android:layout_margin="12dp"/>

    </FrameLayout>

</LinearLayout>